--- a/src/main/resources/templates/carOverviewEdit.html
+++ b/src/main/resources/templates/carOverviewEdit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,6 @@
 </head>
 <body>
 <div class="layout">
-
     <div class="header">
         <div class="logo">
             <a th:href="@{/dashboard}"><img src="/img/Logo.png" alt="BILABONNEMENT Logo"></a>
@@ -22,10 +21,10 @@
     </div>
 
     <main class="main-content">
-
         <section class="viewCar-dashboard">
             <div class="search-card">
                 <h3>Rediger Bil</h3>
+                <p th:if="${errorMessage}" th:text="${errorMessage}" style="color: red;"></p>
                 <form th:action="@{/carOverviewEdit/{carId}(carId=${car.carId})}" method="post">
                     <label>Stelnummer:</label>
                     <input type="text" name="chassisNumber" th:value="${car.chassisNumber}" required><br>
@@ -75,6 +74,5 @@
         <p>Bilabonnement | Medarbejderportal | Kontakt os på support@bilabonnement.dk</p>
     </div>
 </div>
-
 </body>
 </html>
