--- a/src/main/resources/templates/employeeEdit.html
+++ b/src/main/resources/templates/employeeEdit.html
@@ -1,12 +1,11 @@
-<!DOCTYPE  html>
-<html lang="da">
+<!DOCTYPE html>
+<html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>Rediger Medarbejder</title>
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-
 <div class="layout">
   <div class="header">
     <div class="logo">
@@ -14,9 +13,8 @@
     </div>
     <h3>Medarbejderportal</h3>
     <nav>
-
-      <a th:href="@{/employeeOverview.html}" class="back-btn">Tilbage</a>
-      <a th:href="@{/employeeEdit.html}" class="back-btn">Log ud</a>
+      <a th:href="@{/employeeOverviewAdmin}" class="back-btn">Tilbage</a>
+      <a th:href="@{/}" class="back-btn">Log ud</a>
     </nav>
   </div>
 
@@ -25,35 +23,32 @@
   </section>
 
   <main class="main-content">
-
     <div class="search-dashboard">
-    <form th:action="@{/employee/edit/{id}(id=${employee.employeeId})}" th:object="${employee}" method="post">
-      <label for="username">Brugernavn:</label>
-      <input type="text" id="username" th:field="*{username}" required readonly />
+      <p th:if="${editError}" th:text="${editError}" style="color: red;"></p>
+      <form th:action="@{/employee/edit/{id}(id=${employee.employeeId})}" th:object="${employee}" method="post">
+        <label for="username">Brugernavn:</label>
+        <input type="text" id="username" th:field="*{username}" required readonly />
 
-      <label for="password" >Ny adgangskode:</label>
-      <input type="text" id="password" th:field="*{password}" required />
+        <label for="password">Ny adgangskode:</label>
+        <input type="text" id="password" th:field="*{password}" />
 
-      <label for="fullName">Fulde navn:</label>
-      <input type="text" id="fullName" th:field="*{fullName}" required />
+        <label for="fullName">Fulde navn:</label>
+        <input type="text" id="fullName" th:field="*{fullName}" required />
 
-      <label for="signup-role">Rolle</label>
-      <select id="signup-role" name="role" required>
-        <option value="ADMIN">Admin</option>
-        <option value="EMPLOYEE">Employee</option>
-      </select>
+        <label for="role">Rolle:</label>
+        <select id="role" th:field="*{role}" required>
+          <option value="ADMIN">Admin</option>
+          <option value="EMPLOYEE">Employee</option>
+        </select>
 
-      <button type="submit">Gem ændringer</button>
-    </form>
+        <button type="submit">Gem ændringer</button>
+      </form>
     </div>
   </main>
 
   <div class="footer">
-    <p>
-      Bilabonnement | Medarbejderportal | Kontakt os på support@bilabonnement.dk
-    </p>
+    <p>Bilabonnement | Medarbejderportal | Kontakt os på support@bilabonnement.dk</p>
   </div>
 </div>
-
 </body>
 </html>
