--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE  html>
+<!DOCTYPE html>
 <html lang="da" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-
 <div class="header">
     <div class="logo">
         <img src="/img/Logo.png" alt="BILABONNEMENT Logo">
@@ -31,7 +30,7 @@
                 <p th:if="${loginError}" th:text="${loginError}" style="color: red;"></p>
                 <form th:action="@{/login}" method="post">
                     <label for="login-employee-id">EmployeeID</label>
-                    <input type="number" id="login-employee-id" name="employeeId" placeholder="Indtast EmployeeID" required>
+                    <input type="number" id="login-employee-id" name="employeeId" placeholder="Indtast EmployeeID" required min="1">
 
                     <label for="login-username">Brugernavn</label>
                     <input type="text" id="login-username" name="username" placeholder="Indtast brugernavn" required>
@@ -49,6 +48,5 @@
 <div class="footer">
     <p>Bilabonnement | Medarbejderportal | Kontakt os på support@bilabonnement.dk</p>
 </div>
-
 </body>
 </html>
